# illustrated-maps

./: .dockerignore  .gitignore  Disneyland-Resort_Property_Map-2.jpg:Zone.Identifier  Dockerfile  README.md  RESEARCH.md  TESTING_PLAN.md  V2_DESIGN.md  V2_EDITOR_PLAN.md  V2_GENERALIZATION.md  disneyland-park-map-01.jpg:Zone.Identifier  pyproject.toml  railway.toml  requirements.txt  run_dev.sh
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  openseadragon.d.ts
illustrated_map_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
key_buildings/: Chrysler_Building.jpg:Zone.Identifier  Empire_State_Building.jpg:Zone.Identifier  One_World_Trade_Center_Building.jpg:Zone.Identifier
mapgen/: __init__.py  cli.py  config.py
mapgen/api/: __init__.py  dependencies.py  main.py  schemas.py  tasks.py  websocket.py
mapgen/models/: __init__.py  atmosphere.py  border.py  landmark.py  narrative.py  outpaint_region.py  project.py  road_style.py  seam.py  typography.py
mapgen/services/: __init__.py  atmosphere_service.py  blending_service.py  border_service.py  collision_service.py  color_consistency_service.py  composition_service.py  distortion_service.py  dzi_service.py  gemini_service.py  generation_service.py  hierarchical_generation_service.py  highway_shield_service.py  landmark_discovery_service.py  landmark_service.py  narrative_service.py  osm_pbf.py  osm_service.py  outpainting_service.py  palette_service.py  perspective_service.py  psd_service.py  render_service.py  road_style_service.py  terrain_service.py  (+6 more)
tests/: __init__.py  conftest.py  test_osm_service.py
(+172 files in other folders)
